package ch2_adapter.ex2;

public interface Print {
    void printWeak();

    void printStrong();
}
